# eodag-cube

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  Makefile  NOTICE  README.md  README.rst  get_pypi_latest_version.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.binder/: requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  test.yml
binder/: requirements.txt
docs/notebooks/: clip-reproject.ipynb  get_data_basic.ipynb  to_xarray.ipynb
eodag_cube/: __init__.py  eodag_cube.py
eodag_cube/api/: __init__.py
eodag_cube/api/product/: __init__.py  _assets.py  _product.py
eodag_cube/api/product/drivers/: __init__.py  generic.py  sentinel2_l1c.py  stac_assets.py
eodag_cube/api/product/protobuf/: __init__.py  eo_product.proto  eo_product_pb2.py
eodag_cube/rpc/: __init__.py  server.py
eodag_cube/rpc/protocol/: __init__.py  eodag.proto  eodag_pb2.py  eodag_pb2_grpc.py
eodag_cube/types/: __init__.py
eodag_cube/utils/: __init__.py  exceptions.py  metadata.py  xarray.py
tests/: __init__.py  context.py  test_cli.py  test_eodag_cube.py  utils.py
tests/integration/: __init__.py  test_eoproduct_augment_from_xarray.py  test_eoproduct_xarray.py
tests/resources/: NOTICE  eodag_search_result.geojson
tests/resources/products/CAMS_EAC4_20210101_20210102_4d792734017419d1719b53f4d5b5d4d6888641de/: CAMS_EAC4_20210101_20210102_4d792734017419d1719b53f4d5b5d4d6888641de.grib  CAMS_EAC4_20210101_20210102_4d792734017419d1719b53f4d5b5d4d6888641de.grib.5b7b6.idx
tests/resources/products/cams-europe-air-quality-forecasts/: ENS_FORECAST.nc
tests/units/: test_eoproduct.py  test_eoproduct_driver_generic.py  test_eoproduct_driver_sentinel2_l1c.py  test_eoproduct_driver_stac_assets.py  test_utils.py
