[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eodag_cube"
dynamic = ["version"]
description = "Data access for EODAG"
readme = "README.rst"
authors = [
    {name = "CS GROUP - France", email = "eodag@csgroup.space"}
]
license = {text = "Apache 2.0"}
dependencies = [
    "eodag >=3.1.0b2",
    "numpy",
    "rasterio",
    "xarray",
    "rioxarray",
    "h5netcdf",
    "netcdf4",
    "cfgrib",
    "fsspec",
    "s3fs",
    "aiohttp"
]
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Repository = "https://github.com/CS-SI/eodag-cube"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-uv",
    "nose",
    "faker",
    "coverage",
    "moto >=5",
    "responses <0.24.0",
    "twine",
    "wheel",
    "mypy",
    "types-requests",
    "types-shapely",
    "boto3-stubs[essential]"
]

[tool.setuptools]
packages = ["eodag_cube"]

[tool.setuptools.package-data]
eodag_cube = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "eodag_cube.__version__"}

[[tool.mypy.overrides]]
module = [
    "fsspec",
    "fsspec.*",
    "rasterio",
    "rasterio.*",
]
ignore_missing_imports = true

[tool.uv]
cache-keys = [{ git = true }]
